--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: objective-c
 osx_image: xcode12
 xcode_workspace: Passepartout.xcworkspace
 xcode_scheme: PassepartoutCore-iOS
-xcode_destination: platform=iOS Simulator,OS=12.4,name=iPhone Xʀ
+xcode_destination: platform=iOS Simulator,OS=12.4,name=iPhone 11 Pro Max
 cache:
     - bundler
     - cocoapods
